--- a/login.html
+++ b/login.html
@@ -2,10 +2,30 @@
 <html>
   <head>
     <title>V-Tech - Inicio de sesión</title>
+    <link rel="stylesheet" href="Style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
+    
+    <style>
+      .bottom-text {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: auto;
+        background-color: #ccc;
+        padding: 20px;
+        text-align: center;
+        font-size: 18px;
+      }
+    </style>
   </head>
+  
   <body>
+
+    <div class="container-fluid" style="background-image: url('img/Fondo.jpg');">
+    </div>
+    
      <!-- Barra de navegación -->
      <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="inicio.html">V-Tech</a>
@@ -31,7 +51,7 @@
               <a class="nav-link" href="contacto.html">Contacto</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="login.html">Registrate</a>
+              <a class="nav-link" href="registro.html">Registrate</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="login.html">Iniciar Sesion</a>
@@ -51,10 +71,11 @@
     </form>
 
 
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+    <p style="margin-bottom: 20px;">
+
+    <div class="bottom-text" style="background-color: rgba(0, 0, 0, 0.2);">
         © 2023 V-Tech. Todos los derechos reservados.
     </div>
   </body>
 </html>
-```
 
