--- a/perifericos.html
+++ b/perifericos.html
@@ -3,6 +3,10 @@
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
+    
+    <link rel="stylesheet" href="Style.css">
+
+    
     <style>
       body {
         background-color: #f5f5f5;
@@ -26,7 +30,7 @@
         object-fit: cover;
       }
       .btn {
-        background-color: #17a2b8;
+        background-color: #008cff;
         color: #fff;
         border-radius: 0px;
         border: none;
@@ -67,7 +71,7 @@
               <a class="nav-link" href="contacto.html">Contacto</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="login.html">Registrate</a>
+              <a class="nav-link" href="registro.html">Registrate</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="login.html">Iniciar Sesion</a>
@@ -90,7 +94,7 @@
           <div class="card-body">
             <h5 class="card-title">Teclado Mecanico Redragon Kumara 522 RGB Rainbow Fija</h5>
             <p class="card-text">$35.000</p>
-            <a href="#" class="btn">Comprar</a>
+            <a href="compra.html" class="btn">Comprar</a>
           </div>
         </div>
       </div>
@@ -101,7 +105,7 @@
           <div class="card-body">
             <h5 class="card-title">Mouse Gamer Logitech G Pro Wireless, Edición League Of Legends</h5>
             <p class="card-text">$80.000</p>
-            <a href="#" class="btn">Comprar</a>
+            <a href="compra.html" class="btn">Comprar</a>
           </div>
         </div>
       </div>
@@ -112,7 +116,7 @@
           <div class="card-body">
             <h5 class="card-title">Headset Gamer Inalámbrico Logitech G733</h5>
             <p class="card-text">$180.000</p>
-            <a href="#" class="btn">Comprar</a>
+            <a href="compra.html" class="btn">Comprar</a>
           </div>
         </div>
       </div>
@@ -125,7 +129,7 @@
           <div class="card-body">
             <h5 class="card-title">Mousepad Gamer Logitech G840, XL, Edición League Of Legends, 40x90cm</h5>
             <p class="card-text">$30.000</p>
-            <a href="#" class="btn">Comprar</a>
+            <a href="compra.html" class="btn">Comprar</a>
           </div>
         </div>
       </div>
@@ -136,7 +140,7 @@
           <div class="card-body">
             <h5 class="card-title">Mouse Gamer Logitech G203 RGB LIGHTSYNC, 6 botones programables,</h5>
             <p class="card-text">$27.000</p>
-            <a href="#" class="btn">Comprar</a>
+            <a href="compra.html" class="btn">Comprar</a>
           </div>
         </div>
       </div>
@@ -147,7 +151,7 @@
           <div class="card-body">
             <h5 class="card-title">Audifono Gamer Logitech G433 7.1 Wired</h5>
             <p class="card-text">$70.000</p>
-            <a href="#" class="btn">Comprar</a>
+            <a href="compra.html" class="btn">Comprar</a>
           </div>
         </div>
       </div>
