--- a/servicio.html
+++ b/servicio.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="Style.css">
+  <style>
+    .bottom-text {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      margin: auto;
+      background-color: #ccc;
+      padding: 20px;
+      text-align: center;
+      font-size: 18px;
+    }
+  </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
 </head>
@@ -30,7 +44,7 @@
           <a class="nav-link" href="contacto.html">Contacto</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="login.html">Registrate</a>
+          <a class="nav-link" href="registro.html">Registrate</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="login.html">Iniciar Sesion</a>
@@ -48,7 +62,7 @@
         <div class="card-body">
           <h5 class="card-title">Armado de PC</h5>
           <p class="card-text">Te armamos a tu maquina de guerra (costo solo de servicio,componentes por separado).</p>
-          <p class="card-text"><strong>Precio: $20000</strong></p>
+          <p class="card-text"><strong>Precio: $20.000</strong></p>
           <button type="button" class="btn btn-primary">Solicitar Servicio</button>
         </div>
       </div>
@@ -59,7 +73,7 @@
         <div class="card-body">
           <h5 class="card-title">Mantenimiento de PC</h5>
           <p class="card-text">Cuidamos a tu maquina, la limpiamos y ordenamos cada cable que tenga suelto!.</p>
-          <p class="card-text"><strong>Precio: $10000</strong></p>
+          <p class="card-text"><strong>Precio: $10.000</strong></p>
           <button type="button" class="btn btn-primary">Solicitar Servicio</button>
         </div>
       </div>
@@ -70,7 +84,7 @@
         <div class="card-body">
           <h5 class="card-title">Formateo de PC</h5>
           <p class="card-text">Te limpiamos cada Disco Duro y SSD, adicionalmente te instalamos el Windows que solicites!.</p>
-          <p class="card-text"><strong>Precio: $8000</strong></p>
+          <p class="card-text"><strong>Precio: $8.000</strong></p>
           <button type="button" class="btn btn-primary">Solicitar Servicio</button>
         </div>
       </div>
@@ -82,8 +96,8 @@
 
 
 
-  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-    © 2023 V-Tech. Todos los derechos reservados.
+<div class="bottom-text" style="background-color: rgba(0, 0, 0, 0.2);">
+  © 2023 V-Tech. Todos los derechos reservados.
 </div>
 </body>
 </html>
